# chess

./: pyproject.toml
chess_ui/: package-lock.json  package.json
chess_ui/src/: App.vue  client.ts  sparse_matrix.ts
chess_ui/src/components/: Game.vue  GameTable.vue
src/: db.sqlite3
src/chess/: controller.py  maxtrix.py  models.py  serializers.py  urls.py  views.py
src/chess/migrations/: 0001_initial.py  0002_alter_game_table.py  0003_rename_table_game_table_data.py  0004_alter_game_team_to_play.py
src/chess/tests/: test_controller.py  test_matrix.py
src/src/: settings.py  urls.py
