[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.4"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
ipython = "^8.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
